fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body{
 }
 .center{
     margin: auto;
-    width: 25%;
+    max-width: 50%;
     align-content: center;
     text-align: center;
 }
@@ -45,7 +45,7 @@ body{
     background-color: rgb(15, 16, 16);
     font-size: 20px;
     border-radius: 10px;
-    width: 40%;
+    width: 50%;
     opacity: 0.9;
 }
     
@@ -102,6 +102,7 @@ h5{
 }
 .button{
     text-align: center;
+    max-width: 50%;
     font-size: 15px;
     margin: 20px;
     padding: 10px 5px;
